--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -4,3 +4,8 @@ $mobster: #837a89;
 $tango: #ed6c16;
 $white: #ffffff;
 $silver-chalice: #a7a7a7;
+
+$mobile-small: 320px;
+$mobile-medium: 375px;
+$mobile-large: 425px;
+$tablet: 768px;
